--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,14 +1,122 @@
+body{
+  background-image: url("img/background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+}
 
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+.login{
+  height: 400px;
+  width: 400px;
+  margin: 0 auto;
+  background-color: gray;
+  opacity: 0.8;
+  margin-top: 15%;
+  text-align: center;
+  border-style: solid;
+  border-color: brown;
+  border-width: 2px;
+  border-radius: 25px;
+}
 
-// Variables
-@import 'variables';
+.textbox{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  width: 70%;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+.button{
+    background-color: brown; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    opacity: 0.8;
+    cursor: pointer;
+    border-radius: 10px;
+}
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+.button:hover{
+  opacity: 1;
+}
+
+h1{
+  font-size: 3rem;
+  padding-left: 83px;
+  position: absolute;
+  color: white;
+  padding-top: 20px;
+}
+
+.miecze{
+  padding-top: 20px;
+  position: relative;
+  z-index: -1;
+  height: 20%;
+  width: 30%;
+}
+
+.loginLittle{
+  display: block;
+  float:left;
+  width: 50%;
+  box-sizing: border-box;
+  border-style: solid;
+  border-color: brown;
+  border-width: 2px;
+  border-bottom-right-radius: 22px;
+  border-top-left-radius: 22px;
+  cursor: pointer;
+  background-color: brown;
+  // float: left;
+}
+
+.loginLittle:hover, .registerLittle:hover{
+  background-color: brown;
+}
+
+.registerLittle{
+  display: block;
+  float:left;
+  box-sizing: border-box;
+  width: 50%;
+  border-style: solid;
+  border-color: brown;
+  border-width: 2px;
+  border-bottom-left-radius: 22px;
+  border-top-right-radius: 22px;
+  cursor: pointer;
+  // float: left;
+}
+
+.logOrPas{
+  height: 50px;;
+}
+
+.none{
+  display: none;
+}
+
+.block{
+  display: block;
+}
+
+.textbox1{
+  margin-top: 35px;
+}
+
+.registerContent{
+  display: none;
+}
+
+.active{
+  background: brown;
 }
