--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,10 @@ body {
   background-size: cover;
 }
 
+.button {
+  font-family: 'Germania One', cursive;
+}
+
 .login {
   height: 400px;
   width: 400px;
@@ -51,10 +55,11 @@ body {
 
 h1 {
   font-size: 3rem;
-  padding-left: 83px;
+  padding-left: 110px;
   position: absolute;
   color: white;
   padding-top: 20px;
+  font-family: 'Germania One', cursive;
 }
 
 .miecze {
@@ -77,7 +82,10 @@ h1 {
   border-bottom-right-radius: 22px;
   border-top-left-radius: 22px;
   cursor: pointer;
-  background-color: brown;
+  border-left-style: none;
+  border-top-style: none;
+  border-right-style: none;
+  font-family: 'Germania One';
 }
 
 .loginLittle:hover,
@@ -97,6 +105,10 @@ h1 {
   border-bottom-left-radius: 22px;
   border-top-right-radius: 22px;
   cursor: pointer;
+  border-top-style: none;
+  border-right-style: none;
+  border-left-style: none;
+  font-family: 'Germania One';
 }
 
 .logOrPas {
@@ -113,10 +125,6 @@ h1 {
 
 .textbox1 {
   margin-top: 35px;
-}
-
-.registerContent {
-  display: none;
 }
 
 .active {
